--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
         </div> 
       </div>
       
-      <!-- <div id="MOVIE">
+      <div id="MOVIE">
         <h2>MOVIE</h2> 
         <p><iframe width="1000" height="600" src="https://www.youtube.com/embed/js1CtxSY38I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
         <div class="movie2">
           <iframe width="500" height="300" src="https://www.youtube.com/embed/YBJk2dUzLiY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           <iframe width="500" height="300" src="https://www.youtube.com/embed/yh9UdeSPTdQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
-      </div > -->
+      </div > 
 
     <div id="ALBUM">
       <h2>ALBUM</h2>
